Octo SageMaker finetuning related changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 gym >= 0.26
 numpy == 1.24.3
 ml_dtypes == 0.2.0
@@ -5,6 +6,7 @@ chex == 0.1.85
 optax == 0.1.5
 tensorflow_probability == 0.23.0
 tensorflow == 2.15.0
+jaxlib == 0.4.20+cuda11.cudnn86
 jax == 0.4.20
 distrax == 0.1.5
 flax == 0.7.5
